--- a/neat.css
+++ b/neat.css
@@ -142,9 +142,12 @@ tiny_tile5_text {
 	font-family: TheFont;
 	font-size: .7vw;
 }
-styled-select select {
+styled-select {
    background: transparent;
-   width: 10vw;
+   position: absolute;
+   top: 60vh;
+   width: 90vw;
+   left: 5vw;
    padding: 5px;
    font-size: 16px;
    line-height: 1;
@@ -153,20 +156,17 @@ styled-select select {
    height: 34px;
    -webkit-appearance: none;
    font-family: TheFont;
+   font-size: 1.3vw;
    }
+styled-select > a {
+    zoom: 1; /* Trigger hasLayout */
+    padding: 10px;
+    line-height: 180%;
+    text-align: center;
+}
 styled-select option {
 	text-align: center;
 }
-styled-select {
-   position: absolute;
-   left: 45%;
-   top: 60%;
-   width: 10vw;
-   overflow: hidden;
-   background: url(new_arrow.jpg) no-repeat right white;
-   background-size: 2vw;
-   border: 1px solid white;
-   }
 tiny_tile6 {
 	display: inline-block;
 	position: absolute;
